--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,6 +1,6 @@
 name: Test
 
-on: push
+on: pull_request
 
 jobs:
   test:
@@ -23,14 +23,16 @@ jobs:
         run: npm run lint
 
       - name: Run unit tests
-        run: npm run test
+        run: npm test --coverage
 
       - name: Run integration tests
         run: npm run cypress
 
       - name: Merge code coverage reports
-        run: npm run test:coverage
+        run: npm run test:merge-coverage
 
       - name: Danger
         run: npm run danger ci
-        env: GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          DANGER_GITHUB_API_TOKEN: ${{ secrets.DANGER_GITHUB_API_TOKEN }}
